# agent-terminal

./: .gitignore  .tarpaulin.toml  CLAUDE.md  Cargo.toml  README.CN.md  README.md
.claude/: hookify.post-commit-summary.local.md  hookify.pre-push-checks.local.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/cli/src/commands/: bench.rs  debug.rs  dump.rs  list.rs  mod.rs  remote.rs  run_dsl.rs  start.rs  step.rs  test.rs  write.rs
crates/core/: Cargo.toml
crates/core/src/: buffer.rs  dsl.rs  ipc.rs  lib.rs  lock.rs  protocol.rs  session.rs  tcp.rs
crates/core/tests/: buffer_integration_test.rs  cli_integration_test.rs  concurrency_test.rs  dsl_integration_test.rs  error_handling_test.rs  ipc_integration_test.rs  lock_integration_test.rs  protocol_integration_test.rs  session_integration_test.rs  shell_integration_test.rs  sigwinch_integration_test.rs  streaming_integration_test.rs  stress_test.rs  vim_integration_test.rs
crates/core/tests/common/: mod.rs
crates/e2e/: Cargo.toml
crates/e2e/examples/: vim_test.rs
crates/e2e/src/: lib.rs  runner.rs  script.rs  session.rs
crates/vt-100/: Cargo.toml
crates/vt-100/src/: lib.rs
docs/: architecture.md  debugging.md  design-decisions.md  overview.md  quickstart.md  roadmap.md
examples/: run_vim_test.sh  vim_test.atdsl
src/: main.rs
tests/: diagnose_rendering.sh  step_debug_demo.sh  vim_opencode_debug.sh  vim_opencode_dsl.sh  vim_opencode_test.py  vim_screen_recorder.sh
