[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-terminal-core = { path = "../core" }
agent-terminal-e2e = { path = "../e2e" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
