[package]
name = "agent-terminal-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
vt100 = "0.15"
crossterm = "0.27"
libc = "0.2"
anyhow = "1"
nix = { version = "0.27", features = ["signal", "ioctl", "term"] }
base64 = "0.22"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
serial_test = "3"
